rethinkdb connection setup

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
       "express-generator": "*",
       "serve-favicon": "*",
       "rethinkdb": "*",
-      "jquery": "*"
+      "jquery": "*",
+      "request": "*",
+      "cheerio": "*"
   }
 }
